--- a/style.css
+++ b/style.css
@@ -66,3 +66,8 @@ h3 + p {
 .unorder-list li:nth-last-child(2) p {
     background-color: chartreuse;
 }
+
+.conclusion {
+    font-size: 20px;
+    background-color: beige;
+}
