--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
     font-size: 28px;
-    color: #ffffff;
+    color: #7b2525;
     text-align: center;
     margin-top: 20px;
     background-color: rgb(199, 74, 74);
@@ -48,7 +48,7 @@ div > p {
 }
 
 h4{
-background-color: aquamarine;
+background-color: rgb(43, 95, 78);
 }
 
 section p {
@@ -60,7 +60,7 @@ section p {
 }
 
 h3 + p {
-    background-color: cornflowerblue;
+    background-color: rgb(86, 105, 140);
 }
 
 .unorder-list li:nth-last-child(2) p {
